src/css/custom.css
/* ... */
--gray-100: #F7F6F6;
--gray-200: #ECECED;
--gray-300: #DAD9DB;
--gray-400: #B5B4B8;
--gray-500: #7D7B82;
--gray-600: #514E58;
--gray-700: #3A3741;
--gray-800: #231F2B;
--gray-900: #120F1A;
*/


@import url("https://fonts.googleapis.com/css?family=Inter");

img {
    width: auto;
    height: auto;
}

html[data-theme="light"] {
    --ifm-color-primary: #d53c97;
    --ifm-color-primary-dark: #b52d7f;
    --ifm-color-primary-darker: #961f68;
    --ifm-color-primary-darkest: #761050;
    --ifm-color-primary-light: #d967a4;
    --ifm-color-primary-lighter: #e590bd;
    --ifm-color-primary-lightest: #edb0cf;
    --ifm-code-font-size: 95%;
    --ifm-menu-color: #231F2B;
    --ifm-font-family-base: "Inter";
    --ifm-link-color: #ED64A6;

    --ifm-color-info-contrast-background: #F0E3FF;
    --ifm-color-info-dark: #B275FF;
}

html[data-theme="dark"] {
    --ifm-color-primary: #d53c97;
    --ifm-color-primary-dark: #b52d7f;
    --ifm-color-primary-darker: #961f68;
    --ifm-color-primary-darkest: #761050;
    --ifm-color-primary-light: #d967a4;
    --ifm-color-primary-lighter: #e590bd;
    --ifm-color-primary-lightest: #edb0cf;
    --ifm-code-font-size: 95%;
    --ifm-menu-color: #F7F6F6;
    --ifm-background-color: #110F14;
    --ifm-font-family-base: "Inter";
    --ifm-link-color: #ED64A6;

    --ifm-color-info-contrast-background: #F0E3FF;
    --ifm-color-info-dark: #B275FF;
}

.navbar__link svg {
    display: none;
}
.dropdown__link svg {
    display: none;
}
.footer__link-item svg {
    display: none;
}
a.navbar__link {
    font-size: 14px;
    color: #120F1A;
}
.navbar {
    background-color: #F7F6F6;
}

[data-theme="dark"] .navbar {
    background-color: #231F2B;
    --ifm-navbar-link-hover-color: #DEDDDF;
}

[data-theme="dark"] a.navbar__link {
    color: #AEACB0;
}

.footer__link-item {
    font-size: 12px;
}
.footer {
    --ifm-footer-background-color: #F7F6F6;
}

[data-theme="dark"] .footer {
    --ifm-footer-background-color: #231F2B;
}

.theme-doc-sidebar-container {
    background-color: #F7F6F6;
}

[data-theme="dark"] .theme-doc-sidebar-container {
    background-color: #231F2B;
}

.table-of-contents {
    background-color: #F7F6F6;
}

[data-theme="dark"] .table-of-contents {
    background-color: #231F2B;
}

.docusaurus-highlight-code-line {
    background-color: #2F2D32;
    display: block;
    margin: 0 calc(-1 * var(--ifm-pre-padding));
    padding: 0 var(--ifm-pre-padding);
}

html[data-theme="dark"] .docusaurus-highlight-code-line {
    background-color: #242227;
}

.header-github-link {
    padding: 0 0.5rem;
}
/* ... */

